Aula 05 - Servlets (API)

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /Aula04Servlets/nbproject/private/
 /Aula04Servlets/build/
+/Aula05ServletsApi/nbproject/private/
+/Aula05ServletsApi/build/
