Aula 06 - Projeto com vue+bootstrap

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ replay_pid*
 /Aula04Servlets/build/
 /Aula05ServletsApi/nbproject/private/
 /Aula05ServletsApi/build/
+/Aula06VueTasks/nbproject/private/
+/Aula06VueTasks/build/
