--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ replay_pid*
 /Aula05ServletsApi/build/
 /Aula06VueTasks/nbproject/private/
 /Aula06VueTasks/build/
+/Aula10Jsp/nbproject/private/
+/Aula10Jsp/dist/
+/Aula10Jsp/build/
